--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Justin Campbell</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.sass">
     <script src="data.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/6.0.0/bootbox.min.js" integrity="sha512-oVbWSv2O4y1UzvExJMHaHcaib4wsBMS5tEP3/YkMP6GmkwRJAa79Jwsv+Y/w7w2Vb/98/Xhvck10LyJweB8Jsw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -35,7 +36,7 @@
               },
               callback: function (result) {
                 if(result){
-                  let file = new FormData(form);
+                  var file = new FormData(form);
                   var callbackFunctionParams = [];
                   ajaxPost(getApiUrl() + "/items", file, contactFormSubmitCallback, callbackFunctionParams);
                 }
@@ -135,15 +136,17 @@
         }); 
       }    
       function getContent(){
-        let hdr       = getHeader();
-        let intro     = getIntro();
-        let about     = getAbout();
-        let exp       = getExperience();
-        let projects  = getProjects();
+        var hdr       = getHeader();
+        var intro     = getIntro();
+        var about     = getAbout();
+        var exp       = getExperience();
+        var projects  = getProjects();
+        var connect   = getConnect();
         renderContent(intro);
         renderContent(exp);
         renderContent(about);
         renderContent(projects);
+        renderContent(connect);
       }
       function renderContent(data){
         for(var i=0; i<Object.keys(data).length; i++){
@@ -160,6 +163,9 @@
                 break;
               case 5: 
                 showProjects(data[i]);
+                break;
+              case 6: 
+                showConnect(data[i]);
                 break;
               default:
                 console.log("Unknown sectionId");
@@ -220,6 +226,9 @@
         $("#greeting").append('<p style="color:font-color-w;">'+ obj.greeting +'85 </p>');
         $("#about").append('<p>'+ obj.aboutPro +'</p>');
       }
+      function showConnect(obj){
+        $("#about").append('<p>'+ obj.connect +'</p>');
+      }
     
   </script>
   </head>
@@ -227,7 +236,7 @@
       <div class="container-fluid">
         <div class="row">
             <!--LEFT SIDE COLUMN-->
-                <div class="col-lg pl-5 pt-1 bg font-color-w">
+                <div class="col pl-5 pt-1 bg font-color-w">
                   <div class="row">
                   </div>
                   <div class="row">
@@ -259,7 +268,7 @@
                 <div class="col-md-8 mt-5"> 
                   <div class="row ">
                     <div class="col-12 d-flex justify-content-center">
-                      <img class="card-img-top collapse-center" src="images/nixon.jpg" style="width: 22rem;" alt="Card image cap">
+                      <img class="card-img-top collapse-center" src="images/nixon2.jpg" style="width: 18rem;" alt="Card image cap">
                     </div>
                   </div>
                       <!--Info Card-->
@@ -287,7 +296,7 @@
                 </div>
             <!--RIGHT SIDE COL-->
             <!--Scroll - About, Experience, Projects -->
-            <div class="col-lg font-blue" > <!--justify-content-center-->
+            <div class="col font-blue" > <!--justify-content-center-->
               <div class="contentBox">
                   <div class="d-inline-flex justify-content-start">
                     <div class="pt-2">
@@ -295,23 +304,49 @@
                     </div>   
                   </div>
                   <div class="d-flex flex-row justify-content-around py-3">
-                    <img class="left " src="images/coach.png" style="max-height: 75px; max-width: 75px;" alt="coach img">
-                    <img class="right" src="images/coding.png" style="max-height: 75px; max-width: 75px;" alt="coding img">
+                    <img class="left " src="images/hacker.png" style="max-height: 75px; max-width: 75px;" alt="coach img">
+                    <img class="right" src="images/ux.png" style="max-height: 75px; max-width: 75px;" alt="coding img">
                   </div>
                   <div class="d-flex justify-content-center pt-3 mr clearfix">
-                  <a id="aboutJumpTo"><h3 class="pl-1">Coach 
-                    <span class="title">to </span> Coder</h3></a>
+                  <a id="aboutJumpTo"><h3 class="pl-1">C<span class="hdr-text-style">reative</span> | O<span class="hdr-text-style">rganized</span> 
+                  | D<span class="hdr-text-style">ynamic</span> | E<span class="hdr-text-style">fficient</span></h3></a>
                   </div>
                     <div class="row px-3">
                         <!--Content --><div class="justify-content-around font-weight-light mb-3 p-3 pr-2 textIndent" id="about" style="letter-spacing:.13em;"></div>
                       </div>
+                      <div class="row px-3">
+                        <!--Content --><div class="justify-content-around font-weight-light mb-3 p-3 pr-2 textIndent" id="connect" style="letter-spacing:.13em;"></div>
+                      </div>
                         <div class="row">
-                          <div class="col-6">
+                          <div class="col-4">
                             <button class="btn btn-warning" type="button" data-bs-toggle="modal" data-bs-target="#contactFormModal">
                               get in touch
                             </button>
                           </div> 
+                          <div class="col-8">
+                            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                      
+                              <div class="carousel-inner">
+                                <div class="carousel-item active" data-bs-interval="3500">
+                                  <div class="row">
+                                    <div class="col"><img src="images/java.png" class="carousel-img" alt="..."></div>
+                                    <div class="col"><img src="images/c-sharp.png" class="carousel-img" alt="..."></div>
+                                    <div class="col"><img src="images/python.png" class="carousel-img" alt="..."></div>
+                                    <div class="col"><img src="images/js.png" class="carousel-img" alt="..."></div>
+                                  </div>
+                                </div>
+                                <div class="carousel-item" data-bs-interval="3500">
+                                  <div class="row">
+                                    <div class="col"><img src="images/react.png" class="carousel-img" alt="..."></div>
+                                    <div class="col"><img src="images/nodejs.png" class="carousel-img" alt="..."></div>
+                                    <div class="col"><img src="images/sql-server.png" class="carousel-img" alt="..."></div>
+                                    <div class="col"><img src="images/jira.png" class="carousel-img" alt="..."></div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
                         </div>
+                      </div>
                         <div class="row mt-5 mb-2 w-100 border-2 border-bottom border-warning">
                             <a id="projectsJumpTo"><h5 class="mt-4 align-text-bottom font-italic font-weight-light ml-2">Projects</h5></a>
                           </div>
